이미지 안 보이는 현상 ./ 붙여봄

--- a/join1.html
+++ b/join1.html
@@ -146,14 +146,14 @@
                                     <span>01</span>
                                     약관동의
                                     <span>
-                                        <img src="images/regular-right-24.png" alt="진행과정">
+                                        <img src="./images/right-arrow.png" alt="진행과정">
                                     </span>
                                 </li>
                                 <li>
                                     <span>02</span>
                                     정보입력
                                     <span>
-                                        <img src="images/regular-right-24.png" alt="진행과정">
+                                        <img src="./images/right-arrow.png" alt="진행과정">
                                     </span>
                                 </li>
                                 <li>
