--- a/join2.html
+++ b/join2.html
@@ -147,14 +147,14 @@
                                         <span>01</span>
                                         약관동의
                                         <span>
-                                            <img src="images/regular-right-24.png" alt="진행과정">
+                                            <img src="./images/right-arrow.png" alt="진행과정">
                                         </span>
                                     </li>
                                     <li class="page_on">
                                         <span>02</span>
                                         정보입력
                                         <span>
-                                            <img src="images/regular-right-24.png" alt="진행과정">
+                                            <img src="./images/right-arrow.png" alt="진행과정">
                                         </span>
                                     </li>
                                     <li>
@@ -234,6 +234,7 @@
                                                                     <option value="@gmail.com">gmail.com</option>                                                                  
                                                                 </select>
                                                                 <div class="member_warnimg">
+                                                                    <div id="email_correct" class="text_warning" style="display: block;">사용 가능한 이메일입니다.</div>
                                                                     <div id="email_error" class="text_warning" style="display: block;">이메일을 정확하게 입력해주세요.</div>
                                                                 </div>
                                                             </div>
